feat: delete and update meals
