# swagger_output.json
@@ -1076,6 +1076,79 @@
         }
       }
     },
+    "/meal/delMeal": {
+      "delete": {
+        "tags": [
+          "meal"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/meal/updateMeal": {
+      "put": {
+        "tags": [
+          "meal"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "dishName": {
+                  "example": "any"
+                },
+                "desc": {
+                  "example": "any"
+                },
+                "price": {
+                  "example": "any"
+                },
+                "gram": {
+                  "example": "any"
+                },
+                "calories": {
+                  "example": "any"
+                },
+                "maxServingCapacity": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/meal/addReview/{id}": {
       "post": {
         "tags": [
@@ -1320,6 +1393,29 @@
                 }
               }
             }
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/host/accommodations": {
+      "get": {
+        "tags": [
+          "host"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
           }
         ],
         "responses": {
